# noteworth-challenge-api

./: .gitignore  README.rst  data.json  docker-compose.yml  pyproject.toml  tests.sh
noteworth_challenge_api/: .flaskenv  Dockerfile  __init__.py  auth.py  data.json  decoder.py  providers.py  pyproject.toml  setup.py
noteworth_challenge_api/blueprints/: __init__.py  root.py
noteworth_challenge_api/noteworth_challenge_api/: __init__.py  providers.py
noteworth_challenge_app/: Dockerfile  Dockerfile.web  Dockerfile.worker  manage.py  pyproject.toml  pytest.ini  worker.sh
noteworth_challenge_app/noteworth_challenge_app/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
noteworth_challenge_app/providers/: custom_serializer_fields.py  models.py  provider_integration.py  request_utils.py  serializers.py  tasks.py  urls.py  views.py
noteworth_challenge_app/providers/migrations/: 0001_initial.py  0002_auto_20210126_2156.py
noteworth_challenge_app/providers/tests/: factories.py  test_provider_data_fetcher.py  test_provider_data_parser.py  test_serializers.py  test_task.py
tests/: conftest.py  test_noteworth_challenge_api.py
tests/test_blueprints/: test_root.py
