[tool.poetry]
name = "noteworth-challenge-api"
version = "0.1.0"
description = ""
authors = ["Erik Goodman <erik@noteworth.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-dotenv = "^0.14.0"
mypy = "^0.782"
pytest-flask = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
