[tool.poetry]
name = "noteworth_challenge_app"
version = "0.1.0"
description = ""
authors = ["alexaled <alexaled@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.5"
pytest = "^6.2.2"
requests = "^2.25.1"
djangorestframework = "^3.12.2"

[tool.poetry.dev-dependencies]
django-extensions = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
